# SAFIRI_TAKEHOME

./: README.md  __init__.py  config.py  pipeline.py  pyproject.toml  requirements.txt  run_pipeline.py
data/: events.csv  shipments.csv  snapshots.csv
docs/: PIPELINE_SUMMARY.md
outputs/01_data_quality/: data_quality_report.md
outputs/02_split/: split_manifest.csv
outputs/03_eda/: eda_summary.md
outputs/04_model_validation/: frozen_policy.md
outputs/04_model_validation/baselines/: baseline_metrics_validation.csv
outputs/04_model_validation/eta/: eta_validation_metrics.csv
outputs/04_model_validation/risk/: risk_validation_metrics.csv  risk_validation_predictions.csv
outputs/05_final_evaluation/artifacts/: eta_v2.joblib  platt_calibrator.joblib  risk_hgb_v2_stack.joblib
outputs/05_final_evaluation/metrics/: final_test_model_comparison.csv  final_test_risk_calibration.csv  final_test_risk_metrics.csv
outputs/05_final_evaluation/predictions/: final_test_predictions.csv  final_test_risk_predictions.csv
outputs/05_final_evaluation/reports/: FINAL_PIPELINE_REPORT.md  final_case_studies.md  final_test_summary.json
src/: __init__.py  baselines.py  data_split.py  eda.py  eta_models.py  evaluation.py  feature_engineering.py  generate_data.py  orchestrator.py  recommendations.py  reporting.py  risk_model.py  validate_data.py
tests/: test_baselines.py  test_data_split.py  test_eta_models.py  test_evaluation_reporting.py  test_feature_engineering.py  test_generate_data.py  test_reproducibility.py  test_risk_model.py  test_validate_data.py
