[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "final-pipeline"
version = "0.1.0"
description = "Deterministic synthetic shipment ETA and material-delay evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.4",
]

[tool.setuptools]
packages = ["src"]
py-modules = ["config"]
